# chatgpt-diet-app

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/models/: database.py  schemas.py
app/services/: instagram_service.py  meal_processor.py  openai_service.py
app/static/: index.html
